[gd_scene load_steps=2 format=3 uid="uid://bq2mhbvft4cxx"]

[ext_resource type="Script" uid="uid://biorpw2b64urj" path="res://menu/options_menu.gd" id="1_owp0g"]

[node name="OptionsMenu" type="Panel"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_owp0g")

[node name="OptionsBackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 329.0
offset_top = 200.0
offset_right = 548.5
offset_bottom = 318.5
grow_horizontal = 2
grow_vertical = 2
text = "Back"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.5
offset_top = -128.0
offset_right = 350.5
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ResLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Resolution"

[node name="ResolutionOptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="FullLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "FullScreen"

[node name="FullscreenButton" type="CheckButton" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VSyncLabel" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Vsync"

[node name="VSyncButton" type="CheckButton" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
